--- a/src/sass/_skills.scss
+++ b/src/sass/_skills.scss
@@ -53,6 +53,17 @@
   }
 }
 
+.extra-small {
+  width: 54px;
+  height: 54px;
+  transform: scale(0);
+
+  @media screen and (max-width: 650px) {
+    width: 36px;
+    height: 36px;
+  }
+}
+
 .swall {
   animation: swall 1s ease-in-out forwards;
 
@@ -82,32 +93,40 @@
   }
 }
 
-.firebase-icon {
-  background-color: #00b2c9;
+.docker-icon {
+  background-color: #2396ed;
+  grid-area: 1 / 1 / 2 / 3;
+  justify-self: end;
+  align-self: center;
+  animation-delay: 0.9s;
+}
+
+.nodejs-icon {
+  background-color: #81c048;
   grid-area: 1 / 1 / 2 / 5;
   justify-self: end;
   align-self: center;
   animation-delay: 0.9s;
 }
 
-.typescript-icon {
-  background-color: #1976d2;
+.html-icon {
+  background-color: #f2bf22;
   grid-area: 2 / 1 / 3 / 3;
   justify-self: center;
   align-self: center;
   animation-delay: 0.6s;
 }
 
-.sass-icon {
-  background-color: #f06292;
+.typescript-icon {
+  background-color: #1976d2;
   grid-area: 2 / 3 / 3 / 5;
   justify-self: center;
   align-self: center;
   animation-delay: 1.1s;
 }
 
-.sql-icon {
-  background-color: #efdfff;
+.tailwindcss-icon {
+  background: linear-gradient(90deg, #1f293f, #38bdf8 200%);
   grid-area: 1 / 5 / 4 / 7;
   justify-self: center;
   align-self: center;
@@ -131,8 +150,8 @@
   animation-delay: 0.5s;
 }
 
-.parcel-icon {
-  background-color: #5823b7;
+.sql-icon {
+  background-color: #efdfff;
   grid-area: 3 / 1 / 5 / 2;
   justify-self: center;
   align-self: center;
@@ -140,8 +159,8 @@
   animation-delay: 0.9s;
 }
 
-.css-icon {
-  background-color: #039be5;
+.nextjs-icon {
+  background-color: #f5f2f2;
   grid-area: 4 / 5 / 5 / 6;
   justify-self: center;
   align-self: center;
@@ -156,8 +175,8 @@
   animation-delay: 1.1s;
 }
 
-.html-icon {
-  background-color: #f2bf22;
+.css-icon {
+  background-color: #039be5;
   grid-area: 5 / 1 / 7 / 3;
   justify-self: center;
   align-self: center;
@@ -172,10 +191,18 @@
   animation-delay: 0.7s;
 }
 
-.npm-icon {
-  background-color: #fecbcb;
-  grid-area: 6 / 1 / 7 / 6;
-  justify-self: end;
+.sass-icon {
+  background-color: #f06292;
+  grid-area: 6 / 5 / 7 / 7;
+  justify-self: center;
   align-self: start;
   animation-delay: 1.2s;
+}
+
+.grafana-icon {
+  background-color: #f1b928;
+  grid-area: 6 / 3 / 7 / 5;
+  justify-self: start;
+  align-self: center;
+  animation-delay: 1.1s;
 }
